# compute-horde-prompt-gen

./: .gitignore  README.md  download_model.py  pyproject.toml
.github/workflows/: build_push_image.yml  smoke_test.yml
src/compute_horde_prompt_gen/: Dockerfile  download_model.py  model.py  prompt.py  run.py  seeds.py  utils.py
