[project]
name = "compute-horde-prompt-gen"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Andreea Popescu", email = "andreea.popescu@reef.pl"},
]
dependencies = [
    "transformers[torch]>=4.44.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
